objects/A_Customer_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Key_Project_3__c</fullName>
        <label>Key Project 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Share_Plan_Yr_1__c</fullName>
        <formula>IF(ISNULL(TAM_Plan_Yr_1_M__c), 0, IF(TAM_Plan_Yr_1_M__c = 0 ,
			0, TE_Revenue_Fcst_Plan_Yr_1_M__c / TAM_Plan_Yr_1_M__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share Plan Yr+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market_Share_Plan_Yr_4__c</fullName>
        <formula>IF(ISNULL(TAM_Plan_Yr_4_M__c), 0, IF(TAM_Plan_Yr_4_M__c = 0 ,
			0, TE_Revenue_Fcst_Plan_Yr_4_M__c / TAM_Plan_Yr_4_M__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share Plan Yr+4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market_Share_Plan_Yr__c</fullName>
        <formula>IF(ISNULL(TAM_Plan_Year_M__c), 0, IF(TAM_Plan_Year_M__c = 0 ,
			0, TE_Revenue_Fcst_Plan_Yr_M__c / TAM_Plan_Year_M__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share Plan Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market_Share_Prior_Yr__c</fullName>
        <formula>IF(ISNULL(TAM_Prior_Yr_M__c), 0, IF(TAM_Prior_Yr_M__c = 0 ,
			0, TE_Revenue_Prior_Yr_Actual_M__c / TAM_Prior_Yr_M__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share Prior Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Update_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monthly Update Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>A_Customer_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Update_Last_Updated__c</fullName>
        <label>Monthly Update Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monthly_Update__c</fullName>
        <inlineHelpText>Provide a recap of key changes such as won/lost orders or opportunities, milestones achieved on programs, info about the customer (e.g. completed acquisition, financials, etc) and, if nothing has changed, state that.  State essence quickly and concisely.</inlineHelpText>
        <label>Monthly Update</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Obstacle_1__c</fullName>
        <label>Obstacle 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obstacle_2__c</fullName>
        <label>Obstacle 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obstacle_3__c</fullName>
        <label>Obstacle 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchasing_Relationship_Comments__c</fullName>
        <label>Purchasing Relationship Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchasing_Relationship__c</fullName>
        <label>Purchasing Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Growing</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Declining</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_1_Comments__c</fullName>
        <label>Recent Big Win 1 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_1_Date_Won__c</fullName>
        <label>Recent Big Win 1 Date Won</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY11 Q4</fullName>
                </value>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_1_Value_M__c</fullName>
        <inlineHelpText>Recent Big Win Value in Millions, USD, with one decimal place (ie. $1.2M)</inlineHelpText>
        <label>Recent Big Win 1 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_1__c</fullName>
        <label>Recent Big Win 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_2_Comments__c</fullName>
        <label>Recent Big Win 2 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_2_Date_Won__c</fullName>
        <label>Recent Big Win 2 Date Won</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY11 Q4</fullName>
                </value>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_2_Value_M__c</fullName>
        <label>Recent Big Win 2 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_2__c</fullName>
        <label>Recent Big Win 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_3_Comments__c</fullName>
        <label>Recent Big Win 3 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_3_Date_Won__c</fullName>
        <label>Recent Big Win 3 Date Won</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY11 Q4</fullName>
                </value>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_3_Value_M__c</fullName>
        <label>Recent Big Win 3 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent_Big_Win_3__c</fullName>
        <label>Recent Big Win 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Loss_1_Comments__c</fullName>
        <label>Recent Loss 1 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Loss_1_Date__c</fullName>
        <label>Recent Loss 1 Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY11 Q4</fullName>
                </value>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Loss_1_Value_M__c</fullName>
        <inlineHelpText>Recent Loss Value in Millions, USD, with one decimal place (ie. $1.2M)</inlineHelpText>
        <label>Recent Loss 1 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent_Loss_1__c</fullName>
        <label>Recent Loss 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Loss_2_Comments__c</fullName>
        <label>Recent Loss 2 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Loss_2_Date__c</fullName>
        <label>Recent Loss 2 Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY11 Q4</fullName>
                </value>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Loss_2_Value_M__c</fullName>
        <label>Recent Loss 2 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent_Loss_2__c</fullName>
        <label>Recent Loss 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Loss_3_Comments__c</fullName>
        <label>Recent Loss 3 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Loss_3_Date__c</fullName>
        <label>Recent Loss 3 Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY11 Q4</fullName>
                </value>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Loss_3_Value_M__c</fullName>
        <label>Recent Loss 3 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recent_Loss_3__c</fullName>
        <label>Recent Loss 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Section_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Section Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>A_Customer_Profiles_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Section_Last_Updated__c</fullName>
        <label>Revenue Section Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revenue_TAM_SAM__c</fullName>
        <inlineHelpText>Indicate whether you will be supplying figures for TAM or for SAM.</inlineHelpText>
        <label>Revenue TAM/SAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TAM</fullName>
                </value>
                <value>
                    <fullName>SAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Breakdown_1_Description__c</fullName>
        <inlineHelpText>Description of the categories in which you are breaking down the sales for this customer.  Categories may be regions, countries, locations, competitors, etc.  
This information will be presented in a pie chart.</inlineHelpText>
        <label>Sales Breakdown 1</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Breakdown_1_Percent__c</fullName>
        <inlineHelpText>Sales Breakdown Percent for this category.</inlineHelpText>
        <label>Sales Breakdown 1 Percent</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Breakdown_2_Description__c</fullName>
        <label>Sales Breakdown 2</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Breakdown_2_Percent__c</fullName>
        <label>Sales Breakdown 2 Percent</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Breakdown_3_Description__c</fullName>
        <label>Sales Breakdown 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Breakdown_3_Percent__c</fullName>
        <label>Sales Breakdown 3 Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Figures_Makeup__c</fullName>
        <label>TE Sales Figures Makeup</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>Indirect - Distribution</fullName>
                </value>
                <value>
                    <fullName>Indirect - Contract Mfr Alloc&apos;s</fullName>
                </value>
                <value>
                    <fullName>Indirect - 3-tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_10_Status__c</fullName>
        <label>Strategic Initiative 10 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On target</fullName>
                </value>
                <value>
                    <fullName>In process with delays possible</fullName>
                </value>
                <value>
                    <fullName>Not on target</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_10_Target__c</fullName>
        <label>Strategic Initiative 10 Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_10__c</fullName>
        <label>Strategic Initiative 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_1_Status__c</fullName>
        <label>Strategic Initiative 1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On target</fullName>
                </value>
                <value>
                    <fullName>In process with delays possible</fullName>
                </value>
                <value>
                    <fullName>Not on target</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_1_Target__c</fullName>
        <label>Strategic Initiative 1 Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_1__c</fullName>
        <inlineHelpText>How will the goals for this account be achieved?</inlineHelpText>
        <label>Strategic Initiative 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_2_Status__c</fullName>
        <label>Strategic Initiative 2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On target</fullName>
                </value>
                <value>
                    <fullName>In process with delays possible</fullName>
                </value>
                <value>
                    <fullName>Not on target</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_2_Target__c</fullName>
        <label>Strategic Initiative 2 Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_2__c</fullName>
        <label>Strategic Initiative 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAM_Pct_Change_Plan_Yr_1__c</fullName>
        <formula>IF(ISNULL(TAM_Plan_Year_M__c), 0,
			IF(TAM_Plan_Year_M__c = 0 , 0,
			(TAM_Plan_Yr_1_M__c / TAM_Plan_Year_M__c ) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM Pct Change Plan Yr+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TAM_Pct_Change_Plan_Yr_4__c</fullName>
        <formula>IF(ISNULL(TAM_Plan_Yr_1_M__c), 0,
			IF(TAM_Plan_Yr_1_M__c = 0 , 0,
			(TAM_Plan_Yr_4_M__c / TAM_Plan_Yr_1_M__c ) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM Pct Change Plan Yr+4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TAM_Pct_Change_Plan_Yr__c</fullName>
        <formula>IF(ISNULL(TAM_Prior_Yr_M__c), 0,
			IF(TAM_Prior_Yr_M__c = 0 , 0,
			( TAM_Plan_Year_M__c / TAM_Prior_Yr_M__c ) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM Pct Change Plan Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TAM_Plan_Year_M__c</fullName>
        <inlineHelpText>TAM (Total Available Market) for the Plan Year in
			Millions</inlineHelpText>
        <label>TAM Plan Yr M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAM_Plan_Yr_1_M__c</fullName>
        <inlineHelpText>TAM (Total Available Market) for the Plan Year+1 in
			Millions</inlineHelpText>
        <label>TAM Plan Yr+1 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAM_Plan_Yr_4_M__c</fullName>
        <inlineHelpText>TAM (Total Available Market) for the Plan Year+4 in
			Millions</inlineHelpText>
        <label>TAM Plan Yr+4 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAM_Prior_Yr_M__c</fullName>
        <inlineHelpText>TAM (Total Available Market) for the Year prior to the
			Plan Year in Millions</inlineHelpText>
        <label>TAM Prior Yr M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_Performance_Status__c</fullName>
        <label>TE Performance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Solid, holding</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_Revenue_CY_Forecast_M__c</fullName>
        <inlineHelpText>Current Year WIP TE Forecast in Millions</inlineHelpText>
        <label>TE Revenue CY Forecast M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_Revenue_Fcst_Plan_Yr_1_M__c</fullName>
        <inlineHelpText>Plan Year+1 Forecasted TE Revenue in Millions</inlineHelpText>
        <label>TE Revenue Fcst Plan Yr+1 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_Revenue_Fcst_Plan_Yr_4_M__c</fullName>
        <inlineHelpText>Plan Year+4 Forecasted TE Revenue in Millions</inlineHelpText>
        <label>TE Revenue Fcst Plan Yr+4 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_Revenue_Fcst_Plan_Yr_M__c</fullName>
        <inlineHelpText>Plan Year Forecasted TE Revenue in Millions</inlineHelpText>
        <label>TE Revenue Fcst Plan Yr M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_Revenue_Pct_Change_Plan_Yr_1__c</fullName>
        <formula>IF(ISNULL(TE_Revenue_Fcst_Plan_Yr_M__c), 0,
			IF(TE_Revenue_Fcst_Plan_Yr_M__c = 0 , 0,
			(TE_Revenue_Fcst_Plan_Yr_1_M__c / TE_Revenue_Fcst_Plan_Yr_M__c ) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Revenue Pct Change Plan Yr+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TE_Revenue_Pct_Change_Plan_Yr_4__c</fullName>
        <formula>IF(ISNULL(TE_Revenue_Fcst_Plan_Yr_1_M__c), 0,
			IF(TE_Revenue_Fcst_Plan_Yr_1_M__c = 0 , 0,
			(TE_Revenue_Fcst_Plan_Yr_4_M__c / TE_Revenue_Fcst_Plan_Yr_1_M__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Revenue Pct Change Plan Yr+4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TE_Revenue_Pct_Change_Plan_Yr__c</fullName>
        <formula>IF(ISNULL(TE_Revenue_Prior_Yr_Actual_M__c), 0,
			IF(TE_Revenue_Prior_Yr_Actual_M__c = 0 , 0,
			(TE_Revenue_Fcst_Plan_Yr_M__c / TE_Revenue_Prior_Yr_Actual_M__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Revenue Pct Change Plan Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TE_Revenue_Prior_Yr_Actual_M__c</fullName>
        <inlineHelpText>Prior Year Actual TE Revenue in Millions (direct and/or indirect based on the Sales Figure Makeup specified in the account plan definition section) .</inlineHelpText>
        <label>TE Revenue Prior Yr Actual M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_Revenue_YTD_Actual_M__c</fullName>
        <inlineHelpText>YTD Actual TE Revenue in Millions</inlineHelpText>
        <label>TE Revenue YTD Actual M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rev_Pct_Chg_Plan_Yr_1__c</fullName>
        <formula>IF (ISNULL(Total_Revenue_M_Plan_Yr_2__c), 0,
			IF(Total_Revenue_M_Plan_Yr_2__c = 0 , 0,
			(Total_Revenue_M_Plan_Yr_1__c / Total_Revenue_M_Plan_Yr_2__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Rev Pct Chg Plan Yr-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Rev_Pct_Chg_Plan_Yr_2__c</fullName>
        <formula>IF (ISNULL(Total_Revenue_M_Plan_Yr_3__c), 0,
			IF(Total_Revenue_M_Plan_Yr_3__c = 0 , 0,
			(Total_Revenue_M_Plan_Yr_2__c / Total_Revenue_M_Plan_Yr_3__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Rev Pct Chg Plan Yr-2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_M_Plan_Yr_1__c</fullName>
        <label>Total Revenue M Plan Yr-1</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_M_Plan_Yr_2__c</fullName>
        <label>Total Revenue M Plan Yr-2</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_M_Plan_Yr_3__c</fullName>
        <label>Total Revenue M Plan Yr-3</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_A_Customer_Year__c</fullName>
        <description>worker field to enforce uniqueness</description>
        <label>Unique &quot;A&quot; Customer Year</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Worldwide_Account__c</fullName>
        <inlineHelpText>Worldwide Account Number (8-digit) in which accounts
			for this A Customer are included.</inlineHelpText>
        <label>Worldwide Account</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>&quot;A&quot; Customer Profile</label>
    <nameField>
        <label>&quot;A&quot; Customer Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>&quot;A&quot; Customer Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>